# borrow-gpu-for-me

./: .gitignore  CMakeLists.txt  README.md  gpu_model.txt
batch/: cuda.sh  hip.sh
batch/cuda/: mnist.sh
batch/hip/: mnist.sh
include/: auth.h  config.h  container.h  gpu.h  job.h  json.h  push.h  register.h  request.h  tool.h
init/script/: nvidia-container-toolkit.sh
proto/: manage.proto  progress.proto  result.proto  service.proto
src/: auth.cpp  config.cpp  container.cpp  gpu.cpp  job.cpp  json.cpp  main.cpp  push.cpp  register.cpp  request.cpp  tool.cpp
test/: auth_test.cpp  container_test.cpp  json_test.cpp  push_test.cpp  test.cpp  tool.cpp
